--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,17 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: 'com.liferay', name: 'com.liferay.segments.api', version: '1.3.0'
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '3.0.0'
-	compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.1'
-	compile group: 'com.sun.jersey', name: 'jersey-core', version: '1.19.1'	
-	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
-	compile group: 'com.sun.jersey', name: 'jersey-json', version: '1.19.1'
-	compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.9.5'
+
+	compileInclude group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.5'
+	// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
+	compileInclude group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
+	// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore
+	compileInclude group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.10'
+
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+	compileInclude group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.7'
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+	compileInclude group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.7'
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
+	compileInclude group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.7'
 }
